# nestor_celvia

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.text  requirements.txt  settings.json
metadata/: GeneNames.tsv  Human__TCGA_OV__WUSM__Mutation__GAIIx__01_28_2016__BI__Gene__Firehose_MutSig2CV.cbt  clinical.cohort.2024-11-07.json  gene_adco.csv  metadata.repository.2024-11-05.json  train_genes_adco.csv
src/: 21_2.docx  extract_embeddings.py  pre_processor.py  process_dataset.py  vae.py  vae_individual.py
src/notebooks/: classification_attempt.ipynb  eda copy.ipynb  eda.ipynb  first_good_res.ipynb  init.ipynb  light_gbm situation.ipynb  model.ipynb  prepare_gene_for_adco.ipynb
