[tool.poetry]
name = "nestor"
version = "0.1.0"
description = ""
authors = ["tsak1998 <tsakalis.pantelis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.2"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
openslide-python = "^1.3.1"
opencv-python = "^4.10.0.84"
scikit-image = "^0.24.0"
h5py = "^3.12.1"
tqdm = "^4.66.5"
torch = "^2.4.1"
torchvision = "^0.20.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
